--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 
 <body>
+  <div class="wrapper">
   <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
     <a href="#" class="navbar-brand">CANDY</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
@@ -112,9 +113,9 @@
        </div>
       </div>
     </div>
-
+  
   </section>
-
+</div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
